add youtube-dl dependency

--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -11,7 +11,8 @@ RUN \
 		python3-pip \
 		gcc \
 		git \
-		ffmpeg && \
+		ffmpeg \
+		youtube-dl && \
 	rm -rf \
 		/tmp/* \
 		/var/lib/apt/lists/* \
